# ffapi

./: README.md  pyproject.toml
src/ffapi/: main.py
