[project]
name = "ffapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "fastapi[standard]>=0.112.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
